# spam_ai

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  PIT_TOKEN_FIX.md  README.md  TOKENS_GHL.md  TWO_PASS_INTEGRATION.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
config/: current_time.json  optimized_prompt.txt  routes.json
handlers/: __init__.py  webhooks.py
reports/: final_report.md  sprint3_summary.md
scripts/: README.md  analyze_feature_importance.py  analyze_spam_data.py  categorize_spam.py  cluster_spam_patterns.py  collect_spam_conversations.py  current_time.py  diagnose_pagination.py  extract_email_features.py  extract_text_features.py  fetch_message_bodies.py  generate_final_report.py  generate_optimized_prompt.py  parallel_collect.py  perform_eda.py  refresh_token.py  test_messages_api.py  test_optimized_model.py  test_pagination_methods.py  test_pit_detailed.py  test_pit_token.py  test_pit_with_location.py  test_two_pass.py  test_webhook_integration.py
src/ghl_base/: __init__.py  oauth.py  webhook_app.py
utils/: two_pass_detector.py
